Função de plot corrigida

--- a/final/Projeto4.ipynb
+++ b/final/Projeto4.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "386b34ee",
    "metadata": {},
    "outputs": [],
@@ -89,11 +89,16 @@
     "def gaussian_matrix(m:int, n:int):\n",
     "    return np.random.normal(0, 1, (m,n))\n",
     "\n",
-    "def plot_dist(datas:list, legends:list, density=True, title=\"\", bins=100):\n",
-    "    plt.title(title)\n",
+    "def plot_dist(datas:list, legends:list, xlabel, title=\"\", bins=100, density=True):\n",
     "    n = len(datas)\n",
     "    for i in range(n):\n",
     "        plt.hist(datas[i], bins=bins, label=legends[i], density=density)\n",
+    "    if density:\n",
+    "        plt.ylabel(\"Densidade\")\n",
+    "    else:\n",
+    "        plt.ylabel(\"Contagem\")\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel(xlabel)\n",
     "    plt.legend()\n",
     "    plt.show()"
    ]
