Adicionando texto na letra E e D

--- a/final/Projeto4.ipynb
+++ b/final/Projeto4.ipynb
@@ -451,21 +451,49 @@
    "id": "e1dcc7da",
    "metadata": {},
    "source": [
-    "COMENTÁRIOS ALEX:\n",
+    "Anteriormente, tinhamos feito o seguinte código:\n",
+    "```py\n",
+    "for _ in range(k):\n",
+    "    A = gaussian_matrix(m, n)\n",
+    "    values = []\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if i != j:\n",
+    "                A_i = A[:, i]\n",
+    "                A_j = A[:, j]\n",
+    "                value = np.inner(A_i, A_j) / (norm2(A_i) * norm2(A_j))\n",
+    "                values.append(value)\n",
+    "    max = values[np.argmax(values)]\n",
+    "```\n",
     "\n",
-    "Descobrimos também que, teoricamente, podemos diminuir a complexidade do algoritmo de $O(kn^2m)$ para $O(knm^2)$ $(m \\le n)$. Primeiramente, fazemos a decomposição SVD reduzida da matriz $A = U\\Sigma V^*$, pois pagamos na ordem de $nm^2$ iterações. Após isso, calculamos $A^*A = V\\Sigma^* \\Sigma V^* = V\\Sigma^2V$. Como $\\Sigma$ é uma matriz diagonal, pagamos na ordem de $m$ iterações para fazer $x = \\Sigma^2V$ e mais $m$ para fazer $Vx$. Por fim, pagamos mais uma ordem $O(1)$ iterações para achar os valores máximos (precisamos percorrer apenas acima ou abaixo da diagonal principal). Repetindo tal processo $K$ vezes, obtemos uma complexidade $O(kn^2m)$. \n",
+    "De antemão, podemos notar que nenhum dos `for` vão parar de executar antes que **todas** as iterações aconteçam. Ou seja, de antemão, vemos que os 3 `for` iniciais nos geram uma complexidade de:\n",
+    "$$\n",
+    "    O(k n^2)\n",
+    "$$\n",
+    "Entretando, dentro desses loops, ainda temos as operações de **produto interno** e **norma** que são $O(m)$, tendo em vista que as colunas tem $m$ elementos. Assim, temos que nosso resultado final de complexidade é:\n",
+    "$$\n",
+    "    O(k n^2 m)\n",
+    "$$\n",
     "\n",
-    "Após variar os valores de $k$ no exercício anterior, descobrimos que quanto melhor maior o valor de $k$, mais visível será o comportamento da distribuição e mais *fittada* a curva será, contudo, para não comprometer a performance do computador, escolhemos o valor $k = 30000$. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c7b7fe96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot_dist([maxes_vals], [\"Máximos\"], xlabel=\"Máximo ⟨A_i, A_j⟩ / (||A_i||||A_j||)\", title=\"Distribuição dos máximos (k=30000)\", density=False, figsize=(6.4, 4.8))"
+    "Agora nós temos o código atual vetorizado mais otimizado:\n",
+    "\n",
+    "```py\n",
+    "for _ in range(k):\n",
+    "    A = gaussian_matrix(m,n)\n",
+    "    A_normalized = A / np.linalg.norm(A, axis=0)\n",
+    "    G = np.dot(A_normalized.T, A_normalized) \n",
+    "    np.fill_diagonal(G, 0)\n",
+    "    max_val = np.max(np.abs(G))\n",
+    "    max_similarities.append(max_val)\n",
+    "```\n",
+    "\n",
+    "Esse algoritmo é mais otimizado (não teoricamente, e sim computacionalmente) pois eu vou realizar as operações usando as funções do próprio numpy (Que são mais otimizadas). Se olharmos o custo computacional teórico, vamos percorrer $k$ iterações e dentro de cada iteração, a operação mais custosa é $np.dot(A_normalized.T, A_normalized)$ que é uma multiplicação de matrizes $n \\times m$ e $m \\times n$, o que nos dá um custo $O(mn^2)$, logo, nosso custo final fica\n",
+    "$$\n",
+    "    O(k n^2 m)\n",
+    "$$\n",
+    "O mesmo custo teórico de antes\n",
+    "\n",
+    "Descobrimos também que, teoricamente, podemos diminuir a complexidade do algoritmo de $O(kn^2m)$ para $O(knm^2)$ $(m \\le n)$. Primeiramente, fazemos a decomposição SVD reduzida da matriz $A = U\\Sigma V^*$, pois pagamos na ordem de $nm^2$ iterações. Após isso, calculamos $A^*A = V\\Sigma^* \\Sigma V^* = V\\Sigma^2V$. Como $\\Sigma$ é uma matriz diagonal, pagamos na ordem de $m$ iterações para fazer $x = \\Sigma^2V$ e mais $m$ para fazer $Vx$. Por fim, pagamos mais uma ordem $O(1)$ iterações para achar os valores máximos (precisamos percorrer apenas acima ou abaixo da diagonal principal). Repetindo tal processo $K$ vezes, obtemos uma complexidade $O(kn^2m)$."
    ]
   },
   {
@@ -545,11 +573,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47e65ea8",
+   "id": "8717a159",
    "metadata": {},
    "source": [
-    "Fim do documento\n",
+    "A gente consegue perceber que, conforme aumentamos o valor de $m$, os máximos vão se concentrando cada vez mais próximos de $0$. Enquanto, se aumentamos o valor de $n$, os valores vão se afastando de $0$. De forma que, conforme aumentamos ambos juntos, as distribuições vão ficando cada vez mais coladinhas.\n",
     "\n",
+    "Muito provavelmente isso ocorre pois, conforme aumentamos a quantidade de valores na coluna, é o mesmo que aumentar a quantidade de repetições de um experimento de uma variável $N(0, 1)$. Como todos os elementos da matriz seguem $N(0,1)$, faz sentido interpretar a matriz $A$ de forma que cada coluna $A_k$ é uma variável aleatória e os elementos do vetor da coluna representam as observações de $A_k$. E como todos os eventos são independentes entre si, faz sentido que $A_i$ e $A_j$ sejam variáveis independentes, ou seja, conforme eu aumentar a quantidade de elementos (amostras), mais eu vou perceber o quão não semelhantes essas variáveis são, e acaba que o máximo dessa semelhança vai convergindo pra $0$ conforme \"realizamos mais experimentos\"\n",
+    "\n",
+    "E seguindo a mesma lógica, quanto mais variáveis eu adiciono sem aumentar a quantidade de amostras, maiores são as chances de encontrar valores de semelhança altos, ou seja, variáveis que, para mostrar que são independentes, eu precisaria de mais amostras\n",
+    "\n",
+    "E se aumentarmos as duas quantidades juntos, por conta de eu ter MUITAS amostras, eu preciso adicionar MUITAS variáveis para ter uma diferença significativa no aumento da similaridade, por isso que conforme eu aumento ambos os parâmetros, menor é a distância entre cada curva\n",
+    "\n",
+    "Segue aqui o gŕafico obtido rodando $K=30000$ por questões de eu não querer perder o meu precioso gráfico :) (Demorou 210 minutos)\n",
+    "\n",
+    "![Output letra E](../images/output-e.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7255bac3",
+   "metadata": {},
+   "source": [
     "---"
    ]
   }
