Correção de texto da letra d

--- a/final/Projeto4.ipynb
+++ b/final/Projeto4.ipynb
@@ -487,7 +487,7 @@
     "    max_similarities.append(max_val)\n",
     "```\n",
     "\n",
-    "Esse algoritmo é mais otimizado (não teoricamente, e sim computacionalmente) pois eu vou realizar as operações usando as funções do próprio numpy (Que são mais otimizadas). Se olharmos o custo computacional teórico, vamos percorrer $k$ iterações e dentro de cada iteração, a operação mais custosa é $np.dot(A_normalized.T, A_normalized)$ que é uma multiplicação de matrizes $n \\times m$ e $m \\times n$, o que nos dá um custo $O(mn^2)$, logo, nosso custo final fica\n",
+    "Esse algoritmo é mais otimizado (não teoricamente, e sim computacionalmente) pois eu vou realizar as operações usando as funções do próprio numpy (Que são mais otimizadas). Se olharmos o custo computacional teórico, vamos percorrer $k$ iterações e dentro de cada iteração, a operação mais custosa é `np.dot(A_normalized.T, A_normalized)` que é uma multiplicação de matrizes $n \\times m$ e $m \\times n$, o que nos dá um custo $O(mn^2)$, logo, nosso custo final fica\n",
     "$$\n",
     "    O(k n^2 m)\n",
     "$$\n",
